--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm version patch"
+      "post-commit": "npm version patch"
     }
   }
 }
