--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@rom111419/ngx-entity-state-form",
   "description": "Library connects any entity model, ngrx-state and react form. Form will change value after state patching",
-  "author": "Roman Zhukov",
+  "author": "Raman Zhukau",
   "license": "Apache-2.0 License",
   "version": "0.0.18",
   "engines": {
